Initial add of overflow menu

--- a/styles/bootstrap-customization.css
+++ b/styles/bootstrap-customization.css
@@ -1,11 +1,13 @@
 /*Light*/
 /*Dark*/
+/* line 3, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default {
   color: #333;
   background-color: #fff;
   border-color: #ccc;
 }
 
+/* line 8, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default:focus,
 .btn-default.focus {
   color: #333;
@@ -13,12 +15,14 @@
   border-color: #8c8c8c;
 }
 
+/* line 14, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default:hover {
   color: #333;
   background-color: #e6e6e6;
   border-color: #adadad;
 }
 
+/* line 19, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
@@ -27,6 +31,7 @@
   border-color: #adadad;
 }
 
+/* line 26, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default:active:hover,
 .btn-default.active:hover,
 .open > .dropdown-toggle.btn-default:hover,
@@ -41,12 +46,14 @@
   border-color: #8c8c8c;
 }
 
+/* line 39, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
   background-image: none;
 }
 
+/* line 44, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default.disabled:hover,
 .btn-default[disabled]:hover,
 fieldset[disabled] .btn-default:hover,
@@ -60,18 +67,21 @@ fieldset[disabled] .btn-default.focus {
   border-color: #ccc;
 }
 
+/* line 56, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-default .badge {
   color: #fff;
   background-color: #333;
 }
 
 /*Primary buttons*/
+/* line 63, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary {
   color: #fff;
   background-color: #009688;
   border-color: #007d71;
 }
 
+/* line 68, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
@@ -79,12 +89,14 @@ fieldset[disabled] .btn-default.focus {
   border-color: #00635a;
 }
 
+/* line 74, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary:hover {
   color: #fff;
   background-color: #007d71;
   border-color: #00635a;
 }
 
+/* line 79, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
@@ -92,6 +104,7 @@ fieldset[disabled] .btn-default.focus {
   border-color: #004a43;
 }
 
+/* line 85, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary:active:hover,
 .btn-primary.active:hover,
 .open > .dropdown-toggle.btn-primary:hover,
@@ -106,12 +119,14 @@ fieldset[disabled] .btn-default.focus {
   border-color: #00302c;
 }
 
+/* line 98, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   background-image: none;
 }
 
+/* line 103, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary.disabled:hover,
 .btn-primary[disabled]:hover,
 fieldset[disabled] .btn-primary:hover,
@@ -125,41 +140,49 @@ fieldset[disabled] .btn-primary.focus {
   border-color: #00b09f;
 }
 
+/* line 115, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn-primary .badge {
   color: #009688;
   background-color: #fff;
 }
 
 /*Navbar*/
+/* line 122, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default {
   background-color: #e5e5e5;
   border-color: #bdbdbd;
 }
 
+/* line 126, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-brand {
   color: #777;
 }
 
+/* line 129, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
   color: #5e5e5e;
   background-color: transparent;
 }
 
+/* line 134, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-text {
   color: #212121;
 }
 
+/* line 137, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-nav > li > a {
   color: #777;
 }
 
+/* line 140, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #333;
   background-color: transparent;
 }
 
+/* line 145, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
@@ -167,6 +190,7 @@ fieldset[disabled] .btn-primary.focus {
   background-color: #e5e5e5;
 }
 
+/* line 151, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
 .navbar-default .navbar-nav > .disabled > a:focus {
@@ -174,24 +198,29 @@ fieldset[disabled] .btn-primary.focus {
   background-color: transparent;
 }
 
+/* line 157, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-toggle {
   border-color: #ddd;
 }
 
+/* line 160, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #ddd;
 }
 
+/* line 164, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #888;
 }
 
+/* line 167, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
   border-color: #e7e7e7;
 }
 
+/* line 171, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
@@ -200,20 +229,24 @@ fieldset[disabled] .btn-primary.focus {
 }
 
 @media (max-width: 767px) {
+  /* line 178, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #777;
   }
+  /* line 181, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #333;
     background-color: transparent;
   }
+  /* line 186, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #555;
     background-color: #e7e7e7;
   }
+  /* line 192, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
@@ -222,23 +255,28 @@ fieldset[disabled] .btn-primary.focus {
   }
 }
 
+/* line 199, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-link {
   color: #777;
 }
 
+/* line 202, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .navbar-link:hover {
   color: #333;
 }
 
+/* line 205, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .btn-link {
   color: #777;
 }
 
+/* line 208, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
   color: #333;
 }
 
+/* line 212, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
 .navbar-default .btn-link[disabled]:focus,
@@ -247,36 +285,44 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 
 /* Panels */
+/* line 221, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel {
   background-color: #e5e5e5;
   border: 1px solid #bdbdbd;
 }
 
+/* line 225, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel a {
   color: #212121;
 }
 
+/* line 229, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-body {
   background-color: #f2f2f2;
 }
 
+/* line 232, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-heading {
   border-bottom: 1px solid transparent;
 }
 
+/* line 235, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-heading > .dropdown .dropdown-toggle {
   color: #212121;
 }
 
+/* line 238, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-title {
   color: #212121;
 }
 
+/* line 241, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-footer {
   background-color: #e5e5e5;
   border-top: 1px solid #bdbdbd;
 }
 
+/* line 245, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel > .panel-body + .table,
 .panel > .panel-body + .table-responsive,
 .panel > .table + .panel-body,
@@ -284,49 +330,59 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   border-top: 1px solid #bdbdbd;
 }
 
+/* line 251, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-group .panel-heading + .panel-collapse > .panel-body,
 .panel-group .panel-heading + .panel-collapse > .list-group {
   border-top: 1px solid #bdbdbd;
 }
 
+/* line 255, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-group .panel-footer {
   border-top: 0;
 }
 
+/* line 258, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-group .panel-footer + .panel-collapse .panel-body {
   border-bottom: 1px solid #bdbdbd;
 }
 
+/* line 261, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-default {
   color: #212121;
   border-color: #bdbdbd;
 }
 
+/* line 265, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-default > .panel-heading {
   color: #212121;
   background-color: #e5e5e5;
   border-color: #bdbdbd;
 }
 
+/* line 270, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: #bdbdbd;
 }
 
+/* line 273, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-default > .panel-heading .badge {
   color: #f5f5f5;
   background-color: #333333;
 }
 
+/* line 277, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #bdbdbd;
 }
 
 /*FOcus color*/
+/* line 282, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 a:focus {
   /*outline: 2px auto $colorAccent;
   outline-offset: -2px;*/
 }
 
+/* line 287, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
@@ -334,6 +390,7 @@ input[type="checkbox"]:focus {
   outline-offset: -2px;
 }
 
+/* line 294, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .btn:focus,
 .btn:active:focus,
 .btn.active:focus,
@@ -344,6 +401,7 @@ input[type="checkbox"]:focus {
   outline-offset: -2px;*/
 }
 
+/* line 304, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 .form-control:focus {
   border-bottom: 2px solid #ff5252;
   outline: 0;
@@ -352,11 +410,13 @@ input[type="checkbox"]:focus {
 }
 
 /* Loading Bar*/
+/* line 312, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 #loading-bar .bar {
   background: #ff5252;
 }
 
 /* Fancy blur effect */
+/* line 317, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 #loading-bar .peg {
   -moz-box-shadow: #ff5252 1px 0 6px 1px;
   -ms-box-shadow: #ff5252 1px 0 6px 1px;
@@ -364,7 +424,10 @@ input[type="checkbox"]:focus {
   box-shadow: #ff5252 1px 0 6px 1px;
 }
 
+/* line 324, /Users/scott/Documents/work/conduit/sass/bootstrap-customization.scss */
 #loading-bar-spinner .spinner-icon {
   border-top-color: #ff5252;
   border-left-color: #ff5252;
 }
+
+/*# sourceMappingURL=../styles/bootstrap-customization.map */
