--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -2,6 +2,7 @@
 /*Light*/
 /*Dark*/
 /*does not apply to all elements*/
+/* line 10, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view {
   position: absolute;
   top: 10px;
@@ -16,6 +17,7 @@
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
+/* line 26, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #content-wrapper {
   position: absolute;
   top: 0;
@@ -25,6 +27,7 @@
   overflow-y: auto;
 }
 
+/* line 35, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #subject {
   color: #bdbdbd;
   font-size: 12px;
@@ -34,6 +37,7 @@
   text-align: center;
 }
 
+/* line 44, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .btn-edit {
   visibility: visible;
   color: #212121;
@@ -42,31 +46,37 @@
   clear: both;
 }
 
+/* line 51, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .btn-edit:hover {
   background-color: #d1d1d1;
 }
 
+/* line 55, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
   margin: 0 15px;
   height: 50vh;
 }
 
+/* line 60, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
   margin-top: 8px;
   margin: 0 15px;
 }
 
+/* line 67, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .title {
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
+/* line 72, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
+/* line 77, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
   position: relative;
   width: 100%;
@@ -78,6 +88,7 @@
   clear: both;
 }
 
+/* line 87, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
   position: absolute;
   top: 50%;
@@ -86,6 +97,7 @@
   z-index: 100;
 }
 
+/* line 94, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
   position: absolute;
   top: 50%;
@@ -94,6 +106,7 @@
   z-index: 100;
 }
 
+/* line 103, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -102,6 +115,7 @@
   margin-right: -0.25em;
 }
 
+/* line 111, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow {
   background-color: #009688;
   width: 2.5em;
@@ -117,6 +131,7 @@
   vertical-align: middle;
 }
 
+/* line 131, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow:hover {
   cursor: pointer;
   background-color: #00796b;
@@ -124,10 +139,12 @@
   transition: box-shadow .25s ease-in-out;
 }
 
+/* line 138, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
+/* line 142, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -135,18 +152,21 @@
   text-align: center;
 }
 
+/* line 149, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
+/* line 155, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px;
   position: relative;
   top: 30px;
 }
 
+/* line 161, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -155,16 +175,19 @@
   white-space: pre-line;
 }
 
+/* line 169, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 50vw;
 }
 
+/* line 174, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
+/* line 179, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 .article-view #date {
   color: #bdbdbd;
   font-size: 14px;
@@ -174,6 +197,7 @@
   bottom: 15px;
 }
 
+/* line 190, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -185,6 +209,7 @@
   display: inline-block;
 }
 
+/* line 203, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -194,19 +219,23 @@
   font-weight: 700;
 }
 
+/* line 213, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
+/* line 217, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
+/* line 222, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area .btn-primary {
   color: #009688;
 }
 
+/* line 226, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
@@ -215,6 +244,7 @@
   box-shadow: none;
 }
 
+/* line 234, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -230,9 +260,124 @@
   z-index: 101;
 }
 
+/* line 249, /Users/scott/Documents/work/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
   box-shadow: none;
   background: rgba(0, 150, 136, 0.12);
 }
+
+/*
+#overflow-menu {
+	position: absolute;
+	top: 20px;
+    right: 20px;
+    height: 30px;
+    font-size: 18px;
+    padding-top: 3px;
+    width: 30px;
+    color: #bdbdbd;
+    border-radius: 50%;
+    text-align: center;
+    display: block;
+}
+
+#overflow-menu:hover {
+	background: lighten($colorGrey, 20%);
+}*/
+/* line 274, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#overflow-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 100;
+  background-color: transparent;
+  width: 2.5em;
+  height: 2.5em;
+  font-size: 1em;
+  color: #bdbdbd;
+  padding-top: 0.65em;
+  text-align: center;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+/* line 290, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#overflow-menu .caret {
+  visibility: hidden;
+}
+
+/* line 294, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#content-wrapper .form-control {
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  width: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* line 303, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#overflow-menu .btn.btn-default.dropdown-toggle:after {
+  font-family: "Glyphicons Halflings";
+  content: '\e235';
+  margin-left: -.25em;
+}
+
+/* line 309, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#overflow-menu .btn.btn-default.dropdown-toggle {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 100;
+  background-color: white;
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 1.25em;
+  font-size: 1em;
+  color: #bdbdbd;
+  padding-top: 0.45em;
+  text-align: center;
+  justify-content: center;
+  vertical-align: middle;
+  border: none;
+  box-shadow: none;
+}
+
+/* line 329, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#overflow-menu .btn.btn-default.dropdown-toggle:hover {
+  cursor: pointer;
+  background-color: #f0f0f0;
+}
+
+/* line 334, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#overflow-menu .btn.btn-default.dropdown-toggle:active,
+#overflow-menu .btn.btn-default.dropdown-toggle:focus {
+  cursor: pointer;
+  background-color: #e3e3e3;
+}
+
+/* line 340, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#overflow-menu .dropdown-menu.open {
+  position: relative;
+  top: 30px;
+  left: -15%;
+  height: auto;
+  max-height: 25vh;
+  transition: max-height .25s ease-in-out;
+  max-width: 70%;
+  background-color: #fff;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  z-index: 101;
+}
+
+/* line 355, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+#righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
+  width: 100% !important;
+  min-width: initial !important;
+}
+
+/*# sourceMappingURL=../styles/viewer.map */
