--- a/sass/viewer.scss
+++ b/sass/viewer.scss
@@ -252,3 +252,108 @@ $actPadding: 8px;
 	box-shadow: none;
 	background: rgba($colorPrimary, .12);
 }
+/*
+#overflow-menu {
+	position: absolute;
+	top: 20px;
+    right: 20px;
+    height: 30px;
+    font-size: 18px;
+    padding-top: 3px;
+    width: 30px;
+    color: #bdbdbd;
+    border-radius: 50%;
+    text-align: center;
+    display: block;
+}
+
+#overflow-menu:hover {
+	background: lighten($colorGrey, 20%);
+}*/
+
+#overflow-btn{
+	position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 100;
+    background-color: transparent;
+    width: 2.5em;
+    height: 2.5em;
+    font-size: 1em;
+    color: #bdbdbd;
+    padding-top: 0.65em;
+    text-align: center;
+    justify-content: center;
+    vertical-align: middle;
+}
+
+#overflow-menu .caret {
+	visibility: hidden;
+}
+
+#content-wrapper .form-control {
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	width: auto;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+#overflow-menu .btn.btn-default.dropdown-toggle:after {
+	font-family: "Glyphicons Halflings";
+	content: '\e235';
+	margin-left: -.25em;
+}
+
+#overflow-menu .btn.btn-default.dropdown-toggle {
+	position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 100;
+    background-color: white;
+    width: 2.5em;
+    height: 2.5em;
+    border-radius: 1.25em;
+    font-size: 1em;
+    color: #bdbdbd;
+    padding-top: 0.45em;
+    text-align: center;
+    justify-content: center;
+	vertical-align: middle;
+	
+	border: none;
+	box-shadow: none;
+}
+
+	#overflow-menu .btn.btn-default.dropdown-toggle:hover {
+		cursor: pointer;
+		background-color: lighten($colorGrey, 20%);
+	}
+
+	#overflow-menu .btn.btn-default.dropdown-toggle:active,
+	#overflow-menu .btn.btn-default.dropdown-toggle:focus {
+		cursor: pointer;
+		background-color: lighten($colorGrey, 15%);
+	}
+
+#overflow-menu .dropdown-menu.open {
+    position: relative;
+    top: 30px;
+    left: -15%;
+    height: auto;
+    max-height: 25vh;
+    transition: max-height .25s ease-in-out;
+    max-width: 70%;
+    background-color: #fff;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+    z-index: 101;
+}
+
+#righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
+    width: 100% !important;
+    min-width: initial !important;
+}
+
