--- a/styles/book-selector.css
+++ b/styles/book-selector.css
@@ -1,5 +1,6 @@
 /*Light*/
 /*Dark*/
+/* line 4, /Users/scott/Documents/work/conduit/sass/book-selector.scss */
 #right .btn.btn-default.dropdown-toggle {
   background-color: #009688;
   color: white;
@@ -13,6 +14,7 @@
   z-index: 100;
 }
 
+/* line 22, /Users/scott/Documents/work/conduit/sass/book-selector.scss */
 #right .dropdown-menu.open {
   position: relative;
   top: -20px;
@@ -28,7 +30,10 @@
   z-index: 101;
 }
 
+/* line 37, /Users/scott/Documents/work/conduit/sass/book-selector.scss */
 #right .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
 }
+
+/*# sourceMappingURL=../styles/book-selector.map */
