--- a/styles/filter.css
+++ b/styles/filter.css
@@ -1,5 +1,6 @@
 /*Light*/
 /*Dark*/
+/* line 5, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .category-wrapper {
   display: inline-block;
   width: 100%;
@@ -7,6 +8,7 @@
   clear: both;
 }
 
+/* line 12, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .category-wrapper .dropdown {
   width: 45% !important;
   min-width: 200px !important;
@@ -15,6 +17,7 @@
   float: left !important;
 }
 
+/* line 20, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper {
   position: absolute;
   z-index: 100;
@@ -25,19 +28,23 @@
   box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 }
 
+/* line 30, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel-group {
   margin-bottom: 0px;
 }
 
+/* line 34, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel {
   box-shadow: none;
 }
 
+/* line 38, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel-default {
   border: none !important;
   border-radius: 0 !important;
 }
 
+/* line 42, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel-heading {
   background: #757575 !important;
   height: 24px !important;
@@ -46,6 +53,7 @@
   z-index: 99;
 }
 
+/* line 49, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel-open .panel-heading {
   position: absolute;
   bottom: 0;
@@ -54,6 +62,7 @@
   border-radius: 0px 0px 2px 2px;
 }
 
+/* line 56, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel-title {
   color: #fff !important;
   text-align: center !important;
@@ -61,12 +70,16 @@
   padding: 5px 0;
 }
 
+/* line 62, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel-title a {
   color: #fff;
 }
 
+/* line 66, /Users/scott/Documents/work/conduit/sass/filter.scss */
 .accordion-wrapper .panel-body {
   max-height: 40vh;
   overflow-y: scroll;
   padding: 15px 15px 39px 15px;
 }
+
+/*# sourceMappingURL=../styles/filter.map */
