--- a/styles/stream.css
+++ b/styles/stream.css
@@ -1,6 +1,6 @@
 /*Light*/
 /*Dark*/
-/* line 3, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 3, D:/work/dat/conduit/sass/stream.scss */
 .stream {
   width: 100%;
   position: absolute;
@@ -18,32 +18,32 @@
   background: transparent;
 }
 
-/* line 19, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 19, D:/work/dat/conduit/sass/stream.scss */
 .stream .card:last-child {
   border-radius: 0 0 2px 2px;
 }
 
-/* line 25, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 25, D:/work/dat/conduit/sass/stream.scss */
 #article-stream {
   top: 0px;
 }
 
 /*Buttons at bottom of a stream*/
-/* line 33, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 33, D:/work/dat/conduit/sass/stream.scss */
 .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
-/* line 38, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 38, D:/work/dat/conduit/sass/stream.scss */
 .btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
   border-top-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
-/* line 44, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 44, D:/work/dat/conduit/sass/stream.scss */
 .stream-action {
   width: 100%;
   position: absolute;
@@ -57,7 +57,7 @@
   background-color: #009688;
 }
 
-/* line 57, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 57, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
@@ -66,13 +66,13 @@
   box-shadow: none;
 }
 
-/* line 65, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 65, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active {
   color: #fff;
 }
 
-/* line 70, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 70, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active,
 .stream-action .btn-primary:focus,
@@ -87,13 +87,13 @@
   box-shadow: none;
 }
 
-/* line 85, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 85, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn {
   height: 100%;
 }
 
 /*Feed*/
-/* line 91, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 91, D:/work/dat/conduit/sass/stream.scss */
 .fluid-container {
   width: auto;
   position: absolute;
@@ -109,7 +109,7 @@
 }
 
 /*Book*/
-/* line 106, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 106, D:/work/dat/conduit/sass/stream.scss */
 .book {
   width: auto;
   top: 66px;
@@ -119,7 +119,7 @@
   float: right;
 }
 
-/* line 118, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 118, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper {
   position: absolute;
   top: 10px;
@@ -133,14 +133,14 @@
   z-index: 100;
 }
 
-/* line 133, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 133, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
   box-shadow: none;
 }
 
-/* line 139, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 139, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary:active,
 #book-action-wrapper .btn-primary.active,
 #book-action-wrapper .btn-primary:focus,
@@ -155,7 +155,7 @@
   box-shadow: none;
 }
 
-/* line 153, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 153, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .nya-bs-select {
   position: absolute;
   left: 0;
@@ -167,7 +167,7 @@
   box-shadow: none;
 }
 
-/* line 166, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 166, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper nya-bs-select:active,
 #book-action-wrapper nya-bs-select.active,
 #book-action-wrapper nya-bs-select:focus,
@@ -182,7 +182,7 @@
   box-shadow: none;
 }
 
-/* line 180, /Users/scott/Documents/work/conduit/sass/stream.scss */
+/* line 180, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .stream-action {
   position: absolute;
   width: 48px;
