--- a/styles/fab.css
+++ b/styles/fab.css
@@ -1,6 +1,6 @@
 /*Light*/
 /*Dark*/
-/* line 5, /Users/scott/Documents/work/conduit/sass/fab.scss */
+/* line 5, D:/work/dat/conduit/sass/fab.scss */
 #fab {
   position: absolute;
   bottom: 15px;
@@ -17,7 +17,7 @@
   padding: 16px;
 }
 
-/* line 25, /Users/scott/Documents/work/conduit/sass/fab.scss */
+/* line 25, D:/work/dat/conduit/sass/fab.scss */
 #fab:hover {
   transition: box-shadow .25s ease-in-out;
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.12), 0 12px 12px 0 rgba(0, 0, 0, 0.24);
