--- a/styles/filter.css
+++ b/styles/filter.css
@@ -1,6 +1,6 @@
 /*Light*/
 /*Dark*/
-/* line 5, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 5, D:/work/dat/conduit/sass/filter.scss */
 .category-wrapper {
   display: inline-block;
   width: 100%;
@@ -8,7 +8,7 @@
   clear: both;
 }
 
-/* line 12, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 12, D:/work/dat/conduit/sass/filter.scss */
 .category-wrapper .dropdown {
   width: 45% !important;
   min-width: 200px !important;
@@ -17,7 +17,7 @@
   float: left !important;
 }
 
-/* line 20, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 20, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper {
   position: absolute;
   z-index: 100;
@@ -28,23 +28,23 @@
   box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 30, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 30, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-group {
   margin-bottom: 0px;
 }
 
-/* line 34, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 34, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel {
   box-shadow: none;
 }
 
-/* line 38, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 38, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-default {
   border: none !important;
   border-radius: 0 !important;
 }
 
-/* line 42, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 42, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-heading {
   background: #757575 !important;
   height: 24px !important;
@@ -53,7 +53,7 @@
   z-index: 99;
 }
 
-/* line 49, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 49, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-open .panel-heading {
   position: absolute;
   bottom: 0;
@@ -62,7 +62,7 @@
   border-radius: 0px 0px 2px 2px;
 }
 
-/* line 56, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 56, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-title {
   color: #fff !important;
   text-align: center !important;
@@ -70,12 +70,12 @@
   padding: 5px 0;
 }
 
-/* line 62, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 62, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-title a {
   color: #fff;
 }
 
-/* line 66, /Users/scott/Documents/work/conduit/sass/filter.scss */
+/* line 66, D:/work/dat/conduit/sass/filter.scss */
 .accordion-wrapper .panel-body {
   max-height: 40vh;
   overflow-y: scroll;
