--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -2,7 +2,7 @@
 /*Light*/
 /*Dark*/
 /*does not apply to all elements*/
-/* line 10, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 10, D:/work/dat/conduit/sass/viewer.scss */
 .article-view {
   position: absolute;
   top: 10px;
@@ -17,7 +17,7 @@
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 26, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 26, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper {
   position: absolute;
   top: 0;
@@ -27,7 +27,7 @@
   overflow-y: auto;
 }
 
-/* line 35, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 35, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #subject {
   color: #bdbdbd;
   font-size: 12px;
@@ -38,7 +38,7 @@
   text-align: center;
 }
 
-/* line 45, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 45, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit {
   visibility: visible;
   color: #212121;
@@ -47,37 +47,37 @@
   clear: both;
 }
 
-/* line 52, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 52, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit:hover {
   background-color: #d1d1d1;
 }
 
-/* line 56, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 56, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
   padding: 15px;
   height: 50vh;
 }
 
-/* line 61, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 61, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
   margin-top: 8px;
   margin: 0 15px;
 }
 
-/* line 68, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 68, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .title {
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 73, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 73, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
-/* line 78, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 78, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
   position: relative;
   width: 100%;
@@ -89,7 +89,7 @@
   clear: both;
 }
 
-/* line 88, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 88, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
   position: absolute;
   top: 50%;
@@ -98,7 +98,7 @@
   z-index: 100;
 }
 
-/* line 95, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 95, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
   position: absolute;
   top: 50%;
@@ -107,7 +107,7 @@
   z-index: 100;
 }
 
-/* line 104, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 104, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -116,7 +116,7 @@
   margin-right: -0.25em;
 }
 
-/* line 112, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 112, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow {
   background-color: #009688;
   width: 2.5em;
@@ -132,7 +132,7 @@
   vertical-align: middle;
 }
 
-/* line 132, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 132, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow:hover {
   cursor: pointer;
   background-color: #00796b;
@@ -140,12 +140,12 @@
   transition: box-shadow .25s ease-in-out;
 }
 
-/* line 139, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 139, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
-/* line 143, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 143, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -153,21 +153,21 @@
   text-align: center;
 }
 
-/* line 150, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 150, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
-/* line 156, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 156, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px 15px 15px;
   position: relative;
   top: 30px;
 }
 
-/* line 162, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 162, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -176,19 +176,19 @@
   white-space: pre-line;
 }
 
-/* line 170, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 170, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 100%;
 }
 
-/* line 175, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 175, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
-/* line 180, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 180, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #date {
   color: #bdbdbd;
   font-size: 14px;
@@ -198,7 +198,7 @@
   bottom: 15px;
 }
 
-/* line 191, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 191, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -210,7 +210,7 @@
   display: inline-block;
 }
 
-/* line 204, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 204, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -220,23 +220,23 @@
   font-weight: 700;
 }
 
-/* line 214, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 214, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
-/* line 218, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 218, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
-/* line 223, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 223, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary {
   color: #009688;
 }
 
-/* line 227, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 227, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
@@ -245,7 +245,7 @@
   box-shadow: none;
 }
 
-/* line 235, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 235, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -261,7 +261,7 @@
   z-index: 101;
 }
 
-/* line 250, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 250, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
@@ -287,7 +287,7 @@
 #overflow-menu:hover {
 	background: lighten($colorGrey, 20%);
 }*/
-/* line 275, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 275, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -304,12 +304,12 @@
   vertical-align: middle;
 }
 
-/* line 291, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 291, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
-/* line 295, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 295, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -319,19 +319,19 @@
   right: 0;
 }
 
-/* line 304, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 304, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
 
-/* line 308, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 308, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 314, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 314, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -351,20 +351,20 @@
   box-shadow: none;
 }
 
-/* line 334, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 334, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 339, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 339, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 345, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 345, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -380,7 +380,7 @@
   z-index: 101;
 }
 
-/* line 360, /Users/scott/Documents/work/conduit/sass/viewer.scss */
+/* line 360, D:/work/dat/conduit/sass/viewer.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
