--- a/styles/style.css
+++ b/styles/style.css
@@ -866,13 +866,18 @@ body {
 }
 
 /* line 156, D:/work/dat/conduit/sass/viewer.scss */
+.article-view #image-load-error {
+  color: #ff5252;
+}
+
+/* line 160, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px 15px 15px;
   position: relative;
   top: 30px;
 }
 
-/* line 162, D:/work/dat/conduit/sass/viewer.scss */
+/* line 166, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -881,19 +886,19 @@ body {
   white-space: pre-line;
 }
 
-/* line 170, D:/work/dat/conduit/sass/viewer.scss */
+/* line 174, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 100%;
 }
 
-/* line 175, D:/work/dat/conduit/sass/viewer.scss */
+/* line 179, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
-/* line 180, D:/work/dat/conduit/sass/viewer.scss */
+/* line 184, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #date {
   color: #bdbdbd;
   font-size: 14px;
@@ -903,7 +908,7 @@ body {
   bottom: 15px;
 }
 
-/* line 191, D:/work/dat/conduit/sass/viewer.scss */
+/* line 195, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -915,7 +920,7 @@ body {
   display: inline-block;
 }
 
-/* line 204, D:/work/dat/conduit/sass/viewer.scss */
+/* line 208, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -925,23 +930,23 @@ body {
   font-weight: 700;
 }
 
-/* line 214, D:/work/dat/conduit/sass/viewer.scss */
+/* line 218, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
-/* line 218, D:/work/dat/conduit/sass/viewer.scss */
+/* line 222, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
-/* line 223, D:/work/dat/conduit/sass/viewer.scss */
+/* line 227, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary {
   color: #009688;
 }
 
-/* line 227, D:/work/dat/conduit/sass/viewer.scss */
+/* line 231, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
@@ -950,7 +955,7 @@ body {
   box-shadow: none;
 }
 
-/* line 235, D:/work/dat/conduit/sass/viewer.scss */
+/* line 239, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -966,7 +971,7 @@ body {
   z-index: 101;
 }
 
-/* line 250, D:/work/dat/conduit/sass/viewer.scss */
+/* line 254, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
@@ -992,7 +997,7 @@ body {
 #overflow-menu:hover {
 	background: lighten($colorGrey, 20%);
 }*/
-/* line 275, D:/work/dat/conduit/sass/viewer.scss */
+/* line 279, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -1009,12 +1014,12 @@ body {
   vertical-align: middle;
 }
 
-/* line 291, D:/work/dat/conduit/sass/viewer.scss */
+/* line 295, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
-/* line 295, D:/work/dat/conduit/sass/viewer.scss */
+/* line 299, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -1024,19 +1029,19 @@ body {
   right: 0;
 }
 
-/* line 304, D:/work/dat/conduit/sass/viewer.scss */
+/* line 308, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
 
-/* line 308, D:/work/dat/conduit/sass/viewer.scss */
+/* line 312, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 314, D:/work/dat/conduit/sass/viewer.scss */
+/* line 318, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -1056,20 +1061,20 @@ body {
   box-shadow: none;
 }
 
-/* line 334, D:/work/dat/conduit/sass/viewer.scss */
+/* line 338, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 339, D:/work/dat/conduit/sass/viewer.scss */
+/* line 343, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 345, D:/work/dat/conduit/sass/viewer.scss */
+/* line 349, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -1085,7 +1090,7 @@ body {
   z-index: 101;
 }
 
-/* line 360, D:/work/dat/conduit/sass/viewer.scss */
+/* line 364, D:/work/dat/conduit/sass/viewer.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
